--- a/source/package.json
+++ b/source/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sambaumohl.com",
   "version": "1.0.0",
-  "description": "",
+  "description": "Personal Website",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "request": "^2.88.0"
   }
