--- a/source/package.json
+++ b/source/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0"
   }
 }
