--- a/source/package.json
+++ b/source/package.json
@@ -4,7 +4,8 @@
   "description": "Personal Website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "echo: \"Starting..\" && node app.js"
   },
   "author": "",
   "license": "ISC",
