--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,29 +3,10 @@ name: Deploy
 on: [push]
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Install dependencies
-        run: npm ci
-      - name: Build in production mode
-        run: npm run build:prod
-
-  deploy:
-    # even though the workflow should only run if we're on master in the first place,
-    # explicitly check before running the deploy in case we broaden the workflow events
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
 
     runs-on: ubuntu-latest
-    needs: build
-
     steps:
     - uses: actions/checkout@v1
 
@@ -38,7 +19,7 @@ jobs:
         KEY: ${{ secrets.SSHKEY }}
       with:
         source: "."
-        target: "/var/www/sambaumohl.com"
+        target: "/var/www/repos/sambaumohl.com"
 
     - name: Executing remote command
       uses: appleboy/ssh-action@master
@@ -47,4 +28,4 @@ jobs:
         USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
-        script: ls
+        script: /bin/sh /var/www/repos/deploy-pw.sh
