--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "types": [
+      "node"
     ]
   }
 }
