--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,34 @@
-name: Deploy
+name: deployment
 
-on: [push]
+on:
+  push:
+    branches: [master]
+
 jobs:
-  build:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-    - name: Copy repository contents via scp
-      uses: appleboy/scp-action@master
-      env:
-        HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-      with:
-        source: "."
-        target: "/var/www/repos/sambaumohl.com"
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
 
-    - name: Executing remote command
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-        script: /bin/sh /var/www/repos/deploy-pw.sh
+      - name: Install Node Dependencies
+        run: npm ci
+
+      - name: Build Production
+        run: npm run build:prod
+
+      - name: Deploy to Server
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSHKEY }}
+          ARGS: "-rltgoDzvO"
+          SOURCE: dist/sambaumohl-com/
+          REMOTE_HOST: ${{ secrets.HOST }}
+          REMOTE_USER: ${{ secrets.USERNAME }}
+          REMOTE_PORT: ${{ secrets.PORT }}
+          TARGET: /var/www/sambaumohl.com
