--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 14
 
       - name: Install Node Dependencies
-        run: npm ci
+        run: npm ci --no-optional
 
       - name: Build Production
         run: npm run build:prod
