--- a/react/nextjs-blog/package.json
+++ b/react/nextjs-blog/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "sass": "^1.42.1"
   },
   "devDependencies": {
     "@types/node": "^16.10.3",
