--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,14 +20,14 @@ jobs:
         run: npm ci -f
 
       - name: Build Production
-        run: npm run build:prod
+        run: npm run build
 
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSHKEY }}
           ARGS: "-rltgoDzvO"
-          SOURCE: dist/sambaumohl-com/
+          SOURCE: out/
           REMOTE_HOST: ${{ secrets.HOST }}
           REMOTE_USER: ${{ secrets.USERNAME }}
           REMOTE_PORT: ${{ secrets.PORT }}
