--- a/package.json
+++ b/package.json
@@ -1,30 +1,57 @@
 {
-  "name": "sambaumohl-com",
+  "name": "sbaumohlpw",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "date-fns": "^2.27.0",
-    "gray-matter": "^4.0.2",
-    "next": "^11.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "remark": "^12.0.0",
-    "remark-html": "^12.0.0",
-    "sass": "^1.45.0"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "clean": "rimraf dist",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.astro .",
+    "build-types": "tsc --noEmit --pretty"
   },
   "devDependencies": {
-    "@types/node": "^16.11.13",
-    "@types/react": "^17.0.37",
-    "typescript": "^4.5.4"
+    "@astrojs/react": "^0.1.3",
+    "@astrojs/rss": "^0.2.0",
+    "@astrojs/sitemap": "^0.1.2",
+    "@astrojs/tailwind": "^0.2.1",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/react": "^18.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "astro": "1.0.0-beta.44",
+    "astro-eslint-parser": "^0.2.2",
+    "astro-imagetools": "^0.6.10",
+    "astro-robots-txt": "^0.3.2",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-tailwindcss": "^3.5.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.5.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-astro": "^0.1.0-next.5",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "@fontsource/lato": "^5.0.3",
+    "@fontsource/raleway": "^5.0.3",
+    "astro-boilerplate-components": "^1.0.8",
+    "date-fns": "^2.28.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
