--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
-    "@fontsource/lato": "^5.0.3",
-    "@fontsource/raleway": "^5.0.3",
+    "@fontsource-variable/raleway": "^5.0.4",
     "astro-boilerplate-components": "^1.0.8",
     "date-fns": "^2.28.0",
     "react": "^18.2.0",
