--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.1.4",
+    "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.3"
   }
 }
