--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.1.4",
     "astro-icon": "^0.8.1",
-    "tailwindcss": "^3.3.3"
+    "d3": "^7.8.5",
+    "tailwindcss": "^3.3.3",
+    "topojson-client": "^3.1.0"
   }
 }
