--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@fontsource-variable/manrope": "^5.0.14",
     "@fontsource-variable/playfair-display": "^5.0.13",
+    "@fontsource-variable/roboto-mono": "^5.0.13",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.1.4",
