--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.1.4",
     "astro-icon": "^0.8.1",
-    "d3": "^7.8.5",
-    "tailwindcss": "^3.3.3",
-    "topojson-client": "^3.1.0"
+    "tailwindcss": "^3.3.3"
   }
 }
