--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.1.4",
     "astro-icon": "^0.8.1",
+    "daisyui": "^3.9.4",
     "tailwindcss": "^3.3.3"
   }
 }
