--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dangerous-doppler",
+  "name": "sbaumohlpersonalwebsite",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,11 +13,13 @@
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
-    "@fontsource-variable/playfair-display": "^5.0.13",
+    "@fontsource-variable/manrope": "^5.0.14",
+    "@fontsource-variable/roboto-mono": "^5.0.13",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.1.4",
     "astro-icon": "^0.8.1",
+    "daisyui": "^3.9.4",
     "tailwindcss": "^3.3.3"
   }
 }
