--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.0",
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/mdx": "^3.0.0",
+    "@astrojs/sitemap": "^3.1.4",
+    "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/manrope": "^5.0.14",
     "@fontsource-variable/roboto-mono": "^5.0.13",
+    "@playform/compress": "^0.0.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^3.1.4",
-    "astro-icon": "^0.8.1",
+    "astro": "^4.8.6",
+    "astro-icon": "^1.1.0",
     "daisyui": "^3.9.4",
     "tailwindcss": "^3.3.3"
   }
