--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^5.0.5",
     "astro-icon": "^1.1.0",
     "daisyui": "^3.9.4",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.3.3"
   }
 }
