--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.0.2",
+    "@astrojs/react": "^4.2.1",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.3",
     "@fontsource-variable/manrope": "^5.0.14",
@@ -21,8 +22,12 @@
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^5.0.5",
     "astro-icon": "^1.1.0",
+    "d3": "^7.9.0",
     "daisyui": "^3.9.4",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.3"
   }
 }
