--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.2",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.3",
-    "@fontsource-variable/manrope": "^5.0.14",
-    "@fontsource-variable/roboto-mono": "^5.0.13",
+    "@astrojs/mdx": "^4.2.4",
+    "@astrojs/react": "^4.2.4",
+    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@fontsource-variable/source-serif-4": "^5.1.0",
     "@playform/compress": "^0.0.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^5.0.5",
+    "astro": "^5.7.4",
     "astro-icon": "^1.1.0",
+    "d3": "^7.9.0",
     "daisyui": "^3.9.4",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.3"
   }
 }
